--- a/index.html
+++ b/index.html
@@ -4,9 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>CIT 230: Assignment Portal</title>
+    <link rel="stylesheet" href="styles/main.css" />
 </head>
 <body>
-    
+    <header>
+        <img src="images/IMG_5924.jpeg" alt="Profile Picture">
+        <h1>Christian Kamaie</h1>
+        <h2>BYU-Idaho</h2>
+    </header>
+<main>
+    <h2>CIT 230 Assignment Portal</h2>
+    <ul>
+        <li>
+            Lesson 2: 
+            <a href="">TBA</a>
+        </li>
+        <li>
+            Lesson 3: 
+            <a href="">TBA</a>
+        </li>
+        <li>
+            Lesson 4: 
+            <a href="">TBA</a>
+        </li>
+        <li>
+            Lesson 5: 
+            <a href="">TBA</a>
+        </li>
+        <li>
+            Lesson 6: 
+            <a href="">TBA</a>
+        </li>
+        <li>
+            Lesson 7: 
+            <a href="">TBA</a>
+        </li>
+        <li>
+            Lesson 8: 
+            <a href="">TBA</a>
+        </li>
+        <li>
+            Lesson 9: 
+            <a href="">TBA</a>
+        </li>
+    </ul>
+
+
+</main>
+    <footer>
+        <p> &copy; <span id="currentYear"></span> &star; Christian Kamaie &star; Texas &star; <a href="http://www.byui.edu" target="_blank">BYU-Idaho</a></p>
+        <p> Last Modified: <span id="lastModified"></span></p>
+    </footer>
+    <script src="scripts/currentYear.js"></script>
 </body>
 </html>
